src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_58.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<Canvas xml:space="default" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Background="White">
<TextBlock>Hello
	<TextBlock.Foreground>
	</TextBlock.Foreground>
	<TextBlock.Text> hello </TextBlock.Text>
</TextBlock>
</Canvas>
</Page>
